2008-03-05  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/summary.m4: quote all warning messages that will be
	  included in heredocs, to avoid spurious interpretation of backquotes

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Add %{PERLSITELIB} in %files sections.

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped: Use default config if amrecover doesn't send
			a config name.  (amoldrecover doesn't send a config).
	* restore-src/restore.c: amrecover from 2.4.5 doesn't send the filenum,
	  so desired_tape->numfiles == 0.
	  If amidxtaped is launched directly from xinetd, then
	  flags->pipe_to_fd == STDOUT_FILENO, but this test should only
	  succeed for amrestore of amfetchdump.

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Set d_self->is_eof to FALSE.

2008-03-04  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am config/amanda/swig.m4: add a special case for
	  FreeBSD-6.2: include -lpthread in the linking of each perl
	  extension, because libgthread does not pull in libpthread as
	  it does on other platforms.

2008-03-03  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: getnameinfo return != 0 on error.

2008-03-03  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Typo.

2008-03-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tests/vfs_test.c, common-src/event-test.c: Fix ignoring
	  return value of 'pipe', declared with attribute warn_unused_result.

2008-02-29  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amanda.h: add <stdint.h>

2008-02-28  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/installperms.am: --without-installperms now
	  generates a shell-parsable list of desired permissions
	* Makefile.am: erase installperms.sh before beginning a 'make 
	  install'
	* oldrecover-src/Makefile.am client-src/Makefile.am